--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/IliaSmagloy/allostra-exercise#readme",
   "devDependencies": {
+    "@types/better-sqlite3": "^7.4.0",
+    "@types/body-parser": "^1.19.1",
     "@types/express": "github:types/express",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
@@ -29,7 +33,11 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "better-sqlite3": "^7.4.4",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "sqlite": "^4.0.23",
+    "uuid": "^8.3.2"
   }
 }
